<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_toolbar"
        app:title="Detail Story"
        app:titleTextColor="@color/black" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/default_avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/content_description_avatar_dico"
        android:transitionName="user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/bot" />

    <ImageView
        android:id="@+id/story_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="12dp"
        android:background="@color/light_gray"
        android:contentDescription="@string/content_description_image_story"
        android:transitionName="story_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/default_avatar"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/story_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/const_person_name"
        android:textColor="@color/dicoding_secondary_700"
        android:textSize="18sp"
        android:transitionName="user_name"
        app:layout_constraintBottom_toBottomOf="@+id/default_avatar"
        app:layout_constraintStart_toEndOf="@+id/default_avatar"
        app:layout_constraintTop_toTopOf="@+id/default_avatar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_image">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/story_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineHeight="25dp"
                android:text="@string/const_lorem_ipsum"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:transitionName="story_description"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/story_upload_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/const_uploaded_date"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:textStyle="italic"
                android:transitionName="story_upload_time" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>